fix: adjusted image-gallery flex-basis to allow two items per row on tablet devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,68 +69,6 @@ hr {
 }
 
 /* ==========
-BACK TO TOP BUTTON
-========== */
-
-/***************************************************************************************
-*    Title: Bootstrap 4 simple back to top with smooth scroll
-*    Author: BBBootstrap Team
-*    Date: 2020
-*    Availability: https://bbbootstrap.com/snippets/simple-back-top-smooth-scroll-17111555
-***************************************************************************************/
-
-.scroll{
-  color:#fff;
-  margin-top:100px;
-}
-
-#toTopBtn {
-   position: fixed;
-  bottom: 26px;
-  right: 39px;
-  z-index: 98;
-  padding: 21px;
-  background-color: hsla(0, 0%, 83%,.6);
-  
-}
-
-.js .cd-top--fade-out {
-  opacity: .5;
-}
-
-.js .cd-top--is-visible {
-  visibility: visible;
-  opacity: 1;
-}
-
-.js .cd-top {
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity .3s,visibility .3s,background-color .3s;
-}
-
-.cd-top {
-  position: fixed;
-  bottom: 20px;
-  bottom: var(--cd-back-to-top-margin);
-  right: 20px;
-  right: var(--cd-back-to-top-margin);
-  display: inline-block;
-  height: 40px;
-  height: var(--cd-back-to-top-size);
-  width: 40px;
-  width: var(--cd-back-to-top-size);
-  box-shadow: 0 0 10px rgba(0,0,0,.05) !important;
-  background: url(https://res.cloudinary.com/dxfq3iotg/image/upload/v1571057658/cd-top-arrow.svg) no-repeat center 50%;
-  background-color: hsla(5,76%,62%,.8);
-  background-color: hsla(var(--cd-color-3-h),var(--cd-color-3-s),var(--cd-color-3-l),0.8);
-}
-
-.height{
-  height:3000px;
-}
-
-/* ==========
 CALLOUT BANNER
 ========== */
 
@@ -231,7 +169,7 @@ GALLERY
 }
 
 .image-gallery li {
-  flex-basis: 350px;
+  flex-basis: 340px;
 }
 
 .image-gallery li img {
@@ -266,6 +204,20 @@ button[type="submit"] {
   margin: 10px;
   color: #fff;
   background-color: #708090;
+}
+
+/* ==========
+BACK TO TOP BUTTON
+========== */
+
+#to-top-btn {
+  position: fixed;
+  font-size: 160%;
+  bottom: 10px;
+  right: 10px;
+  z-index: 99;
+  padding: 3%;
+  color: hsla(0, 0%, 83%,.9);
 }
 
 /* ==========
@@ -330,7 +282,6 @@ MEDIA QUERIES
   .main-content p {
     width: 90%;
   }
-
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
@@ -391,7 +342,6 @@ MEDIA QUERIES
     font-size: 30px;
   }
 
-
   /* Form */
   .form {
     height: 75vmin;
@@ -407,6 +357,11 @@ MEDIA QUERIES
   /* Main Content */
   .main-content p {
     width: 75%;
+  }
+
+  /* Back to Top Button */
+  #to-top-btn i:hover {
+    color: hsla(210, 13%, 50%,.8)
   }
 }
 
@@ -436,4 +391,9 @@ MEDIA QUERIES
   .main-content p {
     width: 70%;
   } 
+
+  /* Back to Top Button */
+  #to-top-btn i:hover {
+    color: hsla(210, 13%, 50%,.8)
+  }
 }
